--- a/frontend/main.html
+++ b/frontend/main.html
@@ -1,68 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <style> 
-        html, body {
-        height: 100%;
-        margin: 0;
-        padding: 0;
-        }
-        .buttons {
-            display : flex;
-            justify-content: space-between;
-            align-items: center;
-            height: 400px;
-            width: 100%;
+<style> 
+html, body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+}
 
-        }
-        body{
-            background:url("background.jpeg") repeat center ;
-            background-size: cover;         
-        }
-        h1{
-            color:purple;
-            text-align:center;
-            margin:25px;
-            padding:25px;
-            border-radius: 25px;
-        }
-        a:link, a:visited {
-            background-color: pink;
-            color: purple;
-            padding: 14px 25px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            border-radius: 25px;
-        }
+body {
+    background: url("background.jpeg") center center no-repeat;
+    background-size: cover;
+}
 
-        a:hover, a:active {
-            background-color: Fuchsia ;
-        }
-        .textbox{
-            background-color: pink;
-            color: purple;
-            display : flex;
-            align-items: center;
-            height: 100px;
-            justify-content: center;
-            padding:25px;
-            margin:0px 150px 25px; 
-            border-radius: 25px;
-        }
-        .credit{
-            background-color: pink;
-            color: purple;
-            display : flex;
-            align-items: center; 
-            justify-content:flex-end;
-            margin:0px 10px 0px 1000px;
-            padding:10px 10px 0px 10px;
-            border-radius: 25px;
-        }
+h1 {
+    color: purple;
+    text-align: center;
+    background-color: pink;
+    padding: 25px;
+    margin: 25px;
+    border-radius: 25px;
+}
+
+.buttons {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 99%;
+    margin: auto;
+    padding-top: 20vh;
+}
+
+.buttons a {
+    background-color: pink;
+    color: purple;
+    padding: 14px 40px;
+    font-size: 1.2rem;
+    text-decoration: none;
+    border-radius: 25px;
+    min-width: 120px;
+    text-align: center;
+    transition: 0.2s ease;
+}
+
+.buttons a:hover {
+    background-color: fuchsia;
+}
+
+.textbox {
+    background-color: pink;
+    color: purple;
+    padding: 25px;
+    margin: 20vh 10vw;
+    border-radius: 25px;
+    line-height: 1.4;
+}
+
+.credit {
+    display: flex;
+    justify-content: flex-end;
+    padding: 10px;
+    margin-right: 2vw;
+}
+
+.credit a {
+    background-color: pink;
+    padding: 10px 20px;
+    color: purple;
+    border-radius: 20px;
+    text-decoration: none;
+    position:absolute;
+    bottom: 20px; /*super important, it makes sure the credit button is at the right bottom*/
+    right: 20px;
+}
+
         
-    </style>
-  <title>Shazam_Inverse</title>
+</style>
+<title>Shazam_Inverse</title>
 </head>
 
 
