feat: updated artist list

--- a/frontend/artist.html
+++ b/frontend/artist.html
@@ -112,6 +112,38 @@
                 </div>
             </a>
 
+            <a class="artist-card" href="#">
+                <img class="artist-image" src="pics\as.jpeg">
+                <div class="artist-info">
+                    <h3 class="artist-name">Arijit Singh</h3>
+                    <p class="artist-role">Artist</p>
+                </div>
+            </a>
+
+            <a class="artist-card" href="#">
+                <img class="artist-image" src="pics\sc.jpeg">
+                <div class="artist-info">
+                    <h3 class="artist-name">Sabrina Carpenter</h3>
+                    <p class="artist-role">Artist</p>
+                </div>
+            </a>
+
+            <a class="artist-card" href="#">
+                <img class="artist-image" src="pics\ag.jpeg">
+                <div class="artist-info">
+                    <h3 class="artist-name">Ariana Grande</h3>
+                    <p class="artist-role">Artist</p>
+                </div>
+            </a>
+
+            <a class="artist-card" href="#">
+                <img class="artist-image" src="pics\drake.jpeg">
+                <div class="artist-info">
+                    <h3 class="artist-name">Drake</h3>
+                    <p class="artist-role">Artist</p>
+                </div>
+            </a>
+
         </div>
     </div>
     <footer class="site-footer">
