--- a/frontend/main.html
+++ b/frontend/main.html
@@ -10,7 +10,7 @@ html, body {
 }
 
 body {
-    background: url("background.jpeg") center center no-repeat;
+    background: url("background.jpeg") center center repeat;
     background-size: cover;
 }
 
@@ -67,8 +67,8 @@ h1 {
 .textbox {
     background-color: pink;
     color: purple;
-    padding: 25px;
-    margin: 20vh 10vw;
+    padding: 10px;
+    margin: 15vh 10vw;
     border-radius: 25px;
     line-height: 1.4;
 }
@@ -104,10 +104,13 @@ h1 {
     <a href="leaderboard.html" target="_self" >Leaderboard</a>
 </div>
 <div class="textbox">
-    <p>This site lets you test your musical knowledge.
-Select your preferred artist, guess the song, and earn points for a chance to appear on the leaderboard.
-Share the game with your friends to see who performs better.
-Complete all challenges to unlock a special surprise at the end of the game. 
+    <p>Rules of combat:<br>
+        Select your prefered artist and play one of the 3 songs available for the artist.<br>
+        Guess the song by typing it in the box.<br>
+        Guessing in 1 sec rewards with 250 points<br>
+        Guessing in 2 sec rewards with 150 points<br>
+        Guessing in 5 sec rewards with 75 points<br>
+        And if you arent able to guess it , you can reveal song but will recieve no points for it
     </p>
 </div>
 <div class="credit">
