feat : created ragebait.html

--- a/frontend/artist.html
+++ b/frontend/artist.html
@@ -47,7 +47,7 @@
     <div class="artists-wrap">
         <div class="artists-grid">
 
-            <a class="artist-card" href="https://youtube.com">
+            <a class="artist-card" href="ragebait.html">
                 <img class="artist-image" src="pics/ts.jpeg">
                 <div class="artist-info">
                     <h3 class="artist-name">Taylor Swift</h3>
