--- a/frontend/artist.html
+++ b/frontend/artist.html
@@ -1,48 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-    .buttons {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 99%;
-    margin: auto;
-    padding-top: 2vh;
-}
-
-.buttons a {
-    background-color: pink;
-    color: purple;
-    padding: 14px 40px;
-    font-size: 1.2rem;
-    text-decoration: none;
-    border-radius: 25px;
-    min-width: 120px;
-    text-align: center;
-    transition: 0.2s ease;
-}
-
-.buttons a:hover {
-    background-color: fuchsia;
-}
-</style>
     <title>Artists</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.0/p5.js"></script>
 </head>
 <body>
 
-    <div id="glow"></div>
+<div id="glow"></div>
 
-    <!-- HEADER -->
-    <header class="site-header">
-        <h1 class="logo">Pick your artist</h1>
-    </header>
-
-    <div class="buttons">
-    <a href="main.html" target="_self" >Home</a>
-    <a href="leaderboard.html" target="_self" >Leaderboard</a>
-    </div>
+<header class="site-header">
+    <h1 class="logo">Artist Gallery</h1>
+    <nav>
+        <a href="homepage/homepage.html" class="header-home-btn">← Back to Home</a>
+    </nav>
+</header>
 
     <div class="artists-wrap">
         <div class="artists-grid">
@@ -177,11 +149,20 @@
 
         </div>
     </div>
-    <footer class="site-footer">
-        <p>© 2025 Artist Gallery. All Rights Reserved.</p>
-    </footer>
+<footer class="site-footer">
+    <p>© 2025 Artist Gallery. All Rights Reserved.</p>
+</footer>
 
-    <div id="cursor"></div>
-    <script src="glow.js"></script>
+<!-- main cursor -->
+<div id="cursor"></div>
+
+<!-- big follower bubble -->
+<div id="cursor-follower"></div>
+
+<!-- NEW invert trail -->
+<div id="trail"></div>
+
+<script src="cursor.js"></script>
+<script src="sketch.js"></script>
 </body>
 </html>
