--- a/frontend/homepage.html
+++ b/frontend/homepage.html
@@ -11,7 +11,7 @@
     <h1>Welcome to Shazam<sup>-1</sup></h1>
     <p>Can you guess the song from just a few lyrics? Test your music knowledge and climb the leaderboard!</p>
     <div>
-        <a href="/success_/artist_page.html" class="cta-button">Play Game</a>
+        <a href="artist.html" class="cta-button">Play Game</a>
         <a href="leaderboard.html" class="cta-button">Leaderboard</a>
     </div>
 </section>
