--- a/frontend/artist.html
+++ b/frontend/artist.html
@@ -12,7 +12,7 @@
 <header class="site-header">
     <h1 class="logo">Artist Gallery</h1>
     <nav>
-        <a href="homepage/homepage.html" class="header-home-btn">← Back to Home</a>
+        <a href="homepage.html" class="header-home-btn">← Back to Home</a>
     </nav>
 </header>
 
