--- a/frontend/homepage.html
+++ b/frontend/homepage.html
@@ -17,7 +17,7 @@
 </section>
 
 <footer class="site-footer">
-    <p>© 2025 Shazam⁻¹. All Rights Reserved.</p>
+    <p>Made by Lakshit and Danvath.</p>
 </footer>
 
 <!-- Cursors -->
